form overlap fix

--- a/src/core/css/form-style.css
+++ b/src/core/css/form-style.css
@@ -11,6 +11,7 @@ body {
 }
 
 .card {
+   position: relative;
    height: auto;
    border: none;
    padding: 20px;
